# arcs-tools

./: .clang  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindFLAC.cmake  Findlibarcsdec.cmake  Findlibarcstk.cmake
doc/: CMakeLists.txt  Doxyfile-doc.in  Doxyfile.in  namespace-fix.sh
doc/texts/: MAINPAGE.md  MAINPAGE.md.in  README.arcstk-calc.md  README.arcstk-id.md  README.arcstk-parse.md  README.arcstk-verify.md
man/: CMakeLists.txt  Doxyfile-man.in
man/texts/: include.dox  man_calc_1.dox.in  man_id_1.dox.in  man_parse_1.dox.in  man_verify_1.dox.in
src/: ansi.cpp  ansi.hpp  app-calc.cpp  app-calc.hpp  app-id.cpp  app-id.hpp  app-parse.cpp  app-parse.hpp  app-verify.cpp  app-verify.hpp  application.cpp  application.hpp  appregistry.cpp  appregistry.hpp  apps.cpp  apps.hpp  cliparse.cpp  cliparse.hpp  clitokens.cpp  clitokens.hpp  config.cpp  config.hpp  fmtarid.hpp  format.cpp  format.hpp  layouts.cpp  layouts.hpp  main-calc.cpp  main-id.cpp  main-parse.cpp  main-verify.cpp  main.cpp  options.cpp  options.hpp  outputformats.cpp  outputformats.hpp  parsehandlers.cpp  parsehandlers.hpp  printers.cpp  printers.hpp  (+26 more)
test/: CMakeLists.txt  run_config_test.cmake
test/data/: logfile
test/src/: app-calc.cpp  app-id.cpp  app-verify.cpp  clitokens.cpp  clitokens_mocks.hpp  config.cpp  format.cpp  layouts.cpp  main.test.cpp  mocks_parse.hpp  table.cpp  tools-arid.cpp  tools-calc.cpp  tools-dbar.cpp  tools-fs.cpp  tools-parse.cpp  tools-table.cpp
